@@ -2,10 +2,15 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1734 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Introduced strategy pattern for class name conflict resolution during code generation (foundation).
+       Details: http://jira.codehaus.org/browse/CASTOR-1734
+       (Werner - 2006123)
+
 XML:   Resolved issue CASTOR-1693 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Moved Ant JARs into bin/lib (and thus out of lib), and amended build scripts accordingly.
        Details: http://jira.codehaus.org/browse/CASTOR-1693
-       (Werner - 20061210)
+       (Werner - 20061213)
 
 JDO:   Resolved issue CASTOR-1688 using contribution from James Abley [james.abley@volantis.com]
        Fixed NullPointerException thrown in ClassMolderHelper.getFullFields() during JDO initialization.
